fdo#77719 File containing CusGeom gets corrupted on RT.

RT file gets corrupted because in presetgeometry tag shapetype is coming as blank.
A check is introduced to handle that.

Change-Id: Ie79db0f5dcadfa3cd5d3f54d4a676393b3a882c5